best-practices-vpol/require-drop-all/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-drop-all
policies:
- ../require-drop-all.yaml
resources:
- resource.yaml
exceptions:
- exceptions.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: drop-all-capabilities
  resources:
  - add-capabilities-bad
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: drop-all-capabilities
  resources:
  - add-capabilities
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: drop-all-capabilities
  resources:
  - exception-drop-all
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: drop-all-capabilities
  resources:
  - exception-drop-all-positive
  result: pass
